fixed video overflow

--- a/src/media/media.scss
+++ b/src/media/media.scss
@@ -19,6 +19,7 @@
     height: auto;
     min-width: 100%;
     min-height: 100%;
+    max-width: 100vh;
     background-color: #3a3a3a;
     background-repeat: no-repeat;
     background-position: center;
